# exercises

exercise-1/: README.md  pyproject.toml
exercise-2/: README.md  main.py  models.py  pyproject.toml
exercise-2/services/: pokeapi.py  random_user.py
exercise-2/utils/: generator.py
exercise-3/: README.md  main.py  models.py  pyproject.toml  utils.py
exercise-3/fetchers/: googlebooks.py  openlibrary.py
